API Turnos - DTOs
